# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-2998b2efb2ea4c121816981aa7cca16a6988462df79f4b29a8c767d228a63488.json  query-3365f86a1369bc5fa98378781d0a63ba67007de4428f15ab6a3c13aa8051cfc6.json  query-38ba903ad605b1dcbbae874b3bda0833c360ea3a31a7944a49aaab37cf3799aa.json  query-429f0897a3c43dca32af247947c1ddd6d6ddb3240e39400ebd68f60cc6f07bbd.json  query-4e9dd354d67a617ea26df8ae1b9fcd7b3e6583b3bab6a6961a05b8ec52ce64b7.json  query-525ac13c09062be95e15d2e05825ad31b195a7003a2be89ca4d64873deb18ae1.json  query-53be75b9db9e844536f1fdcc6b8c23f6affe2d827cae113832ede7a24dbd7b2a.json  query-661c0f30f913cb9086940ac15a807f55b3484e070068a9d424d4ad9cf6a07f37.json  query-6bf20c7fe789fb7362df03a5feb55dff2759399497b58c12ee8a255928575426.json  query-6db624232a3416f3b2c912c481e60235e88a75c5f574eb493f3ac93ce7de0419.json  query-732d3486a63b2a1e95d4a29c40a3cc82a566cced26d30f9ff02a564179319fde.json  query-9b1d25caa13c30db1f3ef7123dd0035c3abfcb359f097bb4a00962774a038929.json  query-9ca563dbb06bcd0041ceff538c654dec2441ea0959fa67d4d7bcfeffad442654.json  query-a5d93ade3e8f1aba5f00b52011855493ca156f676797ec1c8665c807c80e5a12.json  query-be6a02c098be084a45cb6414d64965896e534ae2ec8229f1b73fa7d323f2fbe4.json  query-c3a24707f2e96a84b4f235f220e721798f216f2a5bbeb653049ca21f7df08170.json  query-cd7eac5691b0bffd8e28648de3e066abf01e01164c62fce24c393ac3a98917e3.json  query-cf41dd94443c6947d6d0ab797fe4fb4ebc44546892ae8652c2cdf1f2ff9316cd.json  query-da05a8df71f2fcddd4a5e0d74ca809646e9aa8b312f81b7a5baadd0dd327a61f.json  query-df5e51c3cbb40ab0f1b52e123a54537961d7390f1edff007b9c12c23c8e3735f.json  query-e1296a90febcd938055c7acf6b340d631a21bdc699e2bc960746166754e60f5b.json  query-e6822c9e162eabc20338cc27d51a8e80578803ec1589c234d93c3919d14a96a6.json  query-fa625c0844ec26b7f59ce885d6fe0b9a4f4676946706cb926c21da6ab1b89d90.json
config/: base.yaml  dev.yaml  prd.yaml  prod.yaml
migrations/: 20240902133427_make_status_not_null_in_subscriptions.sql  20240902133746_create_subscription_tokens_table.sql  20240920083143_create_users_table.sql  20240920154040_add_salt_to_users.sql  20240921133258_remove_salt_from_users.sql  20241004094617_seed_user.sql  20241010121149_relax_null_checks_on_idempotency.sql  20241012122751_create_newsletter_issues_table.sql  20241012123831_rename_content_columns_in_newsletter_issues_table.sql  20241012125027_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  delivery_worker.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: credentials.rs  middleware.rs  mod.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  healthcheck.rs  helpers.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.html  dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  mod.rs  newsletters_form.html  post.rs
src/routes/admin/password/: get.rs  mod.rs  password_form.html  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  login.html  login_form.html  mod.rs  post.rs
src/routes/subscriptions/: confirm.rs  mod.rs  post.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs
tests/zero2prod/: health_check.rs  helpers.rs  subscriptions.rs
tests/zero2prod-test/: dashboard.rs  health_check.rs  healthcheck.rs  helpers.rs  login.rs  main.rs  newsletter.rs  newsletters.rs  password.rs  subscriptions.rs  subscriptions_confirm.rs
