[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>", "Luca Palmieri <rust@lpalmieri.com"]
edition = "2021"
description = "My code for \"Zero To Production In Rust\", a book by Luca Palmieri on API development using Rust."
homepage = "https://www.zero2prod.com/"
repository = "https://github.com/0xdea/zero2prod"
license = "MIT"
keywords = ["tutorial", "api", "web", "email"]
categories = ["web-programming", "email"]

[dependencies]
actix-web = "4"
tokio-macros = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.14"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
env_logger = "0.11.5"
log = "0.4.22"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]

[dev-dependencies]
reqwest = "0.12"
