[package]
name = "zero2prod"
version = "0.1.2"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>", "Luca Palmieri <rust@lpalmieri.com"]
edition = "2021"
description = "My code for \"Zero To Production In Rust\", a book by Luca Palmieri on API development using Rust."
homepage = "https://www.zero2prod.com/"
repository = "https://github.com/0xdea/zero2prod"
license = "MIT"
keywords = ["tutorial", "api", "web", "email"]
categories = ["web-programming", "email"]
default-run = "zero2prod"

[dependencies]
actix-web = "4"
tokio-macros = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.14"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
secrecy = { version = "0.10", features = ["serde"] }
validator = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
url = "2.5"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
actix-session = { version = "0.10", features = ["redis-session-rustls"] }
fake = "2.9"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]

[dev-dependencies]
claim = "0.5"
quickcheck = "1.0"
quickcheck_macros = "1.0"
wiremock = "0.6"
serde_json = "1.0"
linkify = "0.10.0"
fdlimit = "0.3"
serde_urlencoded = "0.7"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
# see https://github.com/johnthagen/min-sized-rust
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
